--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "packageManager": "yarn@4.0.0",
   "dependencies": {
+    "@clerk/nextjs": "^6.31.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.7",
