--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.462.0",
     "mammoth": "^1.9.1",
     "next": "15.0.3",
+    "ogl": "^1.0.11",
     "openai": "^4.73.0",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.2.0",
