--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-dom": "^18.3.1",
     "sharp": "^0.34.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "word-list": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
